# SalesHack

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  PRODUCTION_MANUAL.md  README.md  analyze_media_structure.py  collect_company_data.py  collect_media_urls.py  field_mapper.py  master_fields.json  pyproject.toml  requirements.txt
HRサービス使用状況調査/: MANUAL.md  build_master.py  company_cleaner.py  config.py  http_client.py  run_all.py  test_scrapers.py
HRサービス使用状況調査/scrapers/: base.py  bizreach.py  bizreach_campus.py  career_ticket.py  caritasu.py  en_ambi.py  en_tenshoku.py  kimisuka.py  labbase.py  levtech_rookie.py  offerbox.py  onecareer.py  talentbook.py  type_chuto.py  type_shinsotsu.py
analytics/: csv_exporter.py
collectors/call_data/: __init__.py  csv_importer.py  db_writer.py  run.py
collectors/company_info/: analyze_media_structure.py  collect_company_data.py  collect_media_urls.py  field_mapper.py
collectors/contacts/: __init__.py  db_writer.py  gemini_analyzer.py  page_fetcher.py  regex_extractor.py  run.py
collectors/csv_upload/: company_importer.py  generate_templates.py  persons_importer.py  phone_importer.py
collectors/en_hyouban/: sync.py
collectors/gemini_enrichment/: sync.py
collectors/hr_services/: build_master.py  (+4 more)
config/: settings.py
db/: bigquery.py  company_resolver.py  connection.py  models.py  seed.py  views.sql
docs/: DATABASE_DESIGN.md
pipeline/: cleansing.py  intermediate1.py  intermediate2.py  run.py
schemas/: master_fields.json
scripts/: auto_pipeline.sh  reset_bigquery.py  run_experiment.py
(+15 files in other folders)
